-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10, 11, 12, 13
-
Component/s: hotspot
-
b03
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8219308 | 12.0.2 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8219727 | 12.0.1 | Matthias Baesken | P3 | Resolved | Fixed | b09 |
| JDK-8231773 | 11.0.6-oracle | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8217494 | 11.0.3 | Matthias Baesken | P3 | Resolved | Fixed | master |
Currently, when ThreadPriorityPolicy is set to 1 (so called Aggressive mode), on linux and bsd(+Mac) a root-user-check (geteuid() != 0)) is done.
See for example the coding in jdk/src/hotspot/os/linux/os_linux.cpp int prio_init().
However the root-user-check has a few drawbacks:
- it blocks the capabilities feature available on current Linux distros (CAP_SYS_NICE capability) that can be used to allow setting lower niceness also for non-root
- setting a higher "niceness" (lower priority) is not possible on Linux for non-root because of the geteuid check
See for example the coding in jdk/src/hotspot/os/linux/os_linux.cpp int prio_init().
However the root-user-check has a few drawbacks:
- it blocks the capabilities feature available on current Linux distros (CAP_SYS_NICE capability) that can be used to allow setting lower niceness also for non-root
- setting a higher "niceness" (lower priority) is not possible on Linux for non-root because of the geteuid check
- backported by
-
JDK-8217494 Support ThreadPriorityPolicy mode 1 for non-root users on linux/bsd
-
- Resolved
-
-
JDK-8219308 Support ThreadPriorityPolicy mode 1 for non-root users on linux/bsd
-
- Resolved
-
-
JDK-8219727 Support ThreadPriorityPolicy mode 1 for non-root users on linux/bsd
-
- Resolved
-
-
JDK-8231773 Support ThreadPriorityPolicy mode 1 for non-root users on linux/bsd
-
- Resolved
-