8215962: Support ThreadPriorityPolicy mode 1 for non-root users on linux/bsd

Reviewed-by: dcubed, dholmes